# asliutpm

./: .gitignore  README.md  STREAMLIT_DEPLOY.md  environment.yml  pyproject.toml  requirements.txt
notebooks/: 00_data_overview.ipynb  01_grid_setup.ipynb  02_lst.ipynb  03_variables.ipynb  04_building_height.ipynb  05_dtc_breeze.ipynb  06_standardization.ipynb  07_multicollinearity.ipynb  08_rf_model.ipynb  09_cross_year_validation.ipynb  10_shap_utpm.ipynb
results/: bivariate_decision.json  cross_year_validation.json  era5_wind_calibration.json  external_validation.json  impervious_comparison.json  rf_validation.json  robustness_analysis.json  shap_values.npy  utpm_analysis.json  wind_speed_temporal.json
scripts/: build_streamlit_assets.py
src/: __init__.py  building_height.py  config.py  coord_utils.py  data_loader.py  dtc_breeze.py  feature_selection.py  gee_utils.py  grid_utils.py  modeling.py  spatial_features.py  standardization.py  utpm.py  variables.py
streamlit_app/: README.md  app.py  claude_explainer.py  utils.py
tables/: 00_mahalle_kapsama.csv  00_pilot_alan_kapsama.csv  01_grid_summary.csv  02_lst_summary.csv  03_variables_summary.csv  04_building_summary.csv  05_dtc_road_summary.csv  06_standardization_summary.csv  07_vif_analysis.csv  08_rf_metrics.csv  09_cross_year_metrics.csv  10_utpm_stats.csv  10_utpm_weights.csv  12_era5_hourly_wind.csv  12_era5_wind_calibration.csv  13_lst_wind_yearly.csv  14_priority_summary.csv  16_dw_comparison.csv  17_baseline_comparison.csv  17_feature_elimination.csv  17_hyperparameter_tuning.csv  (+2 more)
tez/: 03_results.md  (+14 more)
(+6 files in other folders)
