[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "utpm"
version = "0.1.0"
description = "Urban Thermal Persistence Model — Konyaaltı"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
